# excvish

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release-prepare.yml  release-publish.yml
docs/: pull_request_template.md  release_process.md  repository_structure.md
src/cvexish/: __init__.py  bbox.py  excv.py  exnp.py
src/cvexish/cv/: drawing.py  masking.py  matching.py  metrics.py
src/excvish/: __init__.py  albumentations.py  pil.py  spectrum.py  types.py
src/excvish/albumentations/: __init__.py  helpers.py  transforms.py
src/excvish/cv/: __init__.py  colors.py  drawing.py  edge.py  geometry.py  labeling.py  masking.py  matching.py  metrics.py
src/excvish/ultralytics/: __init__.py  augment.py
tests/: test___init__.py  test_types.py
tests/albumentations/: test_transforms.py
tests/cv/: test_geometry.py
